updated swag and owner
